finalize syllabi for W22 semester

--- a/HB/HB 3113-Ten Commandments.tex
+++ b/HB/HB 3113-Ten Commandments.tex
@@ -85,8 +85,7 @@ By the end of the course students should be able to:
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are strongly encouraged to
-purchase their own copies. Visit the professor's website for links to
+The following texts are required. Library copies may be placed on reserve, but students are strongly encouraged to purchase their own copies. Visit the professor's website for links to
 \href{https://danieldriver.com/courses/hb-3113/}{order the assigned editions}.
 
 \begingroup
@@ -113,7 +112,7 @@ purchase their own copies. Visit the professor's website for links to
 
 If you do not have access to a good study Bible, I recommend either the
 NRSV (Michael Coogan, ed.) or the NJPS (Adele Berlin and Marc Zvi
-Brettler, eds.), both published by Oxford University Press. Both are also available through \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://www.oxfordbiblicalstudies.com/}{Oxford Biblical Studies Online} (accessible with your AST student/faculty card barcode number and password).
+Brettler, eds.), both published by Oxford University Press. Both are also available in the AST Library and through \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://www.oxfordbiblicalstudies.com/}{Oxford Biblical Studies Online} (accessible with your AST student card barcode number and password).
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -179,19 +178,20 @@ numbers, except in the case of Rossetti, which gives page numbers.
 	\toprule
 	\sessionskip{\textbf{\S.}}&\textbf{Command}&\textbf{Exposition}&\textbf{Reception}&\textbf{Rossetti}&\textbf{Date}\\
 	\midrule
-		& (Intro)  &              & Centuries 11    &             & 11 Jan. \\%
-		& First    & Miller Intro & Centuries 1     & pp. 6–25    & 18 Jan. \\% https://archive.org/details/letterspiritnote00ross/page/n7/mode/2up
-		& Second   & Miller 1     & Centuries 2–3   & pp. 26–45   & 25 Jan. \\%
-		& Third    & Miller 2     & Centuries 4     & pp. 46–65   &  1 Feb. \\%
-		& Fourth   & Miller 3     & Centuries 5     & pp. 66–85   &  8 Feb. \\%
-		& Fifth    & Miller 4     & Centuries 6     & pp. 86–105  & 15 Feb. \\%
-	\noclass{Reading Week}                                        & 22 Feb. \\%
-		& Sixth    & Miller 5     & Centuries 7     & pp. 106–125 &  1 Mar. \\%
-		& Seventh  & Miller 6     & Centuries 8     & pp. 126–145 &  8 Mar. \\%
-		& Eighth   & Miller 7     & Centuries 9     & pp. 146–165 & 15 Mar. \\%
+		& (Intro)  &              & Centuries 11    &             & 11 Jan. \\
+		& First    & Miller Intro & Centuries 1     & pp. 6–25    & 18 Jan. \\
+		& Second   & Miller 1     & Centuries 2–3   & pp. 26–45   & 25 Jan. \\
+		& Third    & Miller 2     & Centuries 4     & pp. 46–65   &  1 Feb. \\
+		& Fourth   & Miller 3     & Centuries 5     & pp. 66–85   &  8 Feb. \\
+		& Fifth    & Miller 4     & Centuries 6     & pp. 86–105  & 15 Feb. \\
+	\noclass{Reading Week}                                        & 22 Feb. \\
+		& Sixth    & Miller 5     & Centuries 7     & pp. 106–125 &  1 Mar. \\
+		& Seventh  & Miller 6     & Centuries 8     & pp. 126–145 &  8 Mar. \\
+		& Eighth   & Miller 7     & Centuries 9     & pp. 146–165 & 15 Mar. \\
 		& Ninth    & Miller 8     & Centuries 10    & pp. 166–185 & 22 Mar. \\
 		& Tenth    & Miller 9     & Centuries 12–13 & pp. 186–206 & 29 Mar. \\
-		& (Recap)  & Miller end   & Film: tbd       &             & 5 Apr. \\
+		& (Recap)  & Miller end   & Film: tbd       &             & 5 Apr.  \\
+	\reminder{End of Term: Final marks due for all courses}{13 Apr.} \\
 	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
