--- a/ST-cross/HBST 3001-Doctrine and the OT.tex
+++ b/ST-cross/HBST 3001-Doctrine and the OT.tex
@@ -11,24 +11,25 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.2.0]{HB/ST 3001}
+\coursecode[2.0]{HB/ST 3001}
 \coursetitle[Hebrew Bible/Systematic Theology]{Christian Doctrine and\\[.8ex] the Old Testament}
 
 % Taught as RLGS 4483 (a remote antecedent) at Tyndale UC in:
 %   - Winter 2009 ("Biblical Theological Themes: The Old Testament as Christian Scripture")
 % Taught as HB/ST 3001 (largely a new course) at AST in:
 %   - Summer 2017 (Session 3: July 17-21 and 24-28)
+%   - Winter 2022
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Daily, 12:15--12:45 \PM}
+\officehours[Microsoft Teams]{Tuesdays, 1:00--3:00 \PM}
 
-\semester{Summer Term 2017}
-\meets{Mon–Fri, July 17–28}% \meets{on}{at}{in}
-      {9:00--12:00 \AM}
-      {Flahiff Room (Library)}
-\website{danieldriver.com/courses/}
+\semester{Winter Term 2022}
+\meets{Tuesdays}% \meets{on}{at}{in}
+      {4:00--6:30 \PM\ Atlantic}
+      {Teams/Classroom 3}
+\website{danieldriver.com}
 \cdescription{% copy from the current Academic Calendar
 	What is the relationship of scripture and theology? Some answers to
 	this question start with the Bible, while others begin with
@@ -51,26 +52,24 @@
 	and gospel, death and resurrection, and the afterlife.
 }% end of course description
 \objectives{% review Bloom's taxonomy: http://www.celt.iastate.edu/teaching/effective-teaching-practices/revised-blooms-taxonomy
-            % or try this new one at Rice: http://cte.rice.edu/blogarchive/2017/2/23/taxonomy
-	This course aims to do two things. (1) To offer an overview of the ecumenical core of Christian eucharistic theology. (2) To introduce and discuss some of the different perspectives on the Eucharist that shape ecumenical relations today.
-
-	Inconveniently for us, early Christians didn’t write with us in mind. Almost all early Christian texts are written for “insiders” by “insiders”. There are no “So you’ve decided to become a Christian” pamphlets with detailed descriptions of their practices. If there were, we would have a much better sense of how they understood the bread they broke and the cup they drank. Instead, all we have are tantalising snippets – most of which you’ll read – from the early Church where they refer to their eucharistic practices. But how are we to understand these snippets? They make reference to Jewish and New Testament foundations, and so, before you read them, you’ll get acquainted with some of these sources. But from these scant sources you’ll be invited, in dialog with each other and the instructors, to develop your understanding of the Eucharist. What is it? A memorial meal? A symbolic re-enactment of the last supper? Golgotha continued as the hand of God reached out from the Triune life to weave us into union with God and each other? What is it? Does it do anything to you? If so, under what conditions is its potency greatest? Why do Roman Catholics ask non-Roman Catholics to refrain from taking communion at Roman Catholic Masses? Is this not ecumenical elitism – a refusal of the very unity the Eucharist symbolises (or instantiates)? We will be asking all these questions. We will be doing so in dialog with a subtheme of this course – the past and future of eucharistic sharing at AST. AST was at the forefront of post Vatican II Christian ecumenism and eucharistic sharing was commonplace. What needs to be in place for this to happen again? Is the eucharist an instrument for bringing about Christian unity? Is it a sacramental consummation of ontological unity – the sign of Christian oneness? Or, Is it an act of friendship between diverse and different strands of Christianity?
-
-	In addition to exploring the Eucharist \emph{per se}, and the eucharist in ecumenical perspective, there is also an opportunity for each student to investigate particular aspects of eucharistic and/or ecumenical theology via the two main papers you will be writing in fulfillment of course requirements. Touch base with the instructors when something “grabs you”. We will be able to recommend readings as you follow your ideas where they lead.
-
-
-	They should become familiar with
-		a few major narratives about the relationship of Bible and Theology, and with
-		different theories about how to frame knowledge of God (in terms apophatic and kataphatic, for example).
-	They should be able to analyze and evaluate doctrinal claims
-		by biblical scholars and theologians who use the OT as a core theological resource.
-	Students should also develop curiosity about the role of Hebrew scripture in
-		communities beyond the church, including in the academy and especially the synagogue.
-		Their creativity and confidence in expressing their own ideas about the Scriptures of Israel should grow,
-		even as they learn to do so with appropriate humility and charity.
-	Finally, students should experience a process of discovery in dialogue with
-		biblical traditions ancient and strange as they come to terms with their own ways
-		of thinking and speaking about the God of Israel.
+% or try this one at Rice: http://cte.rice.edu/blogarchive/2017/2/23/taxonomy
+	By the end of this course students should develop knowledge of some
+	ways different churches -- including Roman Catholic, Anglican, and
+	United -- approach the Bible in general, and the Old Testament in
+	particular, as scripture. They should become familiar with some
+	leading narratives about the relationship of Bible and Theology, and
+	with different theories about how to frame knowledge of God (in
+	terms apophatic and kataphatic, for example). They should be able to
+	analyze and evaluate doctrinal claims by biblical scholars and
+	theologians who use the OT as a core theological resource. Students
+	should also develop curiosity about the role of Hebrew scripture in
+	communities beyond the church, including in the academy and the
+	synagogue. Their creativity and confidence in expressing their own
+	ideas about the Scriptures of Israel should grow, even as they learn
+	to do so with appropriate humility and charity. Finally, students
+	should experience a process of discovery in dialogue with biblical
+	traditions ancient and strange as they pursue fresh ways ways of
+	thinking and speaking about the God of Israel.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -85,29 +84,34 @@
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are encouraged to purchase
-their own copies. Library copies that are not already reference works
-will be placed on a 1-hour reserve.
+The following texts are required. Library copies may be placed on reserve, but students are strongly encouraged to purchase their own copies. Visit the professor's website for links to
+\href{https://danieldriver.com/courses/hbst-3001/}{order the assigned editions}.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{MacDonald}% use the longest item in the bibliography
-
-	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
-    Oxford / New York: Oxford University Press, 2010.
-%    \textsc{isbn} 978-0195289602.
+\begin{thebibliography}{Anderson}% use the longest item in the bibliography
 
 	\bibitem[Anderson]{anderson} Gary A. Anderson.
 	\emph{Christian Doctrine and the Old Testament: Theology in the Service of Biblical Exegesis}.
 	Grand Rapids: Baker Academic, 2017.
-%	\textsc{isbn} 978-0801098253.
+	\textsc{isbn} 978-0801098253.
 
-	\bibitem[MacDonald]{macdonald} Neil B. MacDonald.
-	\emph{Metaphysics and the God of Israel: Systematic Theology of the Old and New Testaments}.
-	Grand Rapids: Baker Academic, 2006.
+	\bibitem[Davis]{davis} Ellen F. Davis.
+	\emph{Opening Israel’s Scriptures}.
+	Oxford: Oxford University Press, 2019.
+	\textsc{isbn} 978-0190948948.
+
+	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
+	\emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
+	Oxford: Oxford University Press, 2018.
+	\textsc{isbn} 978-0190276072.
+
+%	Assigned in Summer 2017 - students struggled with it, though
+%
+%	\bibitem[MacDonald]{macdonald} Neil B. MacDonald.
+%	\emph{Metaphysics and the God of Israel: Systematic Theology of the Old and New Testaments}.
+%	Grand Rapids: Baker Academic, 2006.
 %	\textsc{isbn} 978-0801032431.
-	For those who are unable to find copies of this book for resale, the library's reserve copy should suffice to meet the needs of the class.
 
 %	\bibitem[tk]{tk} tk.
 %	\emph{tk}.
@@ -117,18 +121,22 @@ will be placed on a 1-hour reserve.
 \end{thebibliography}
 \endgroup
 
-An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
-Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford / New York: Oxford University Press, 2014). A reference copy is
-available in the library, and it is well worth consulting.
+An good alternative study Bible is the NJPS: Adele Berlin and Marc Zvi
+Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (Oxford:
+Oxford University Press, 2014). Reference copies of both the NRSV and
+NJPS are available in the AST library. Electronic versions are also
+available through
+\href{http://ezproxy.astheology.ns.ca:2048/login?url=http://www.oxfordbiblicalstudies.com/}{Oxford Biblical Studies Online} (accessible with your AST student card barcode number and password).
 
 \section{Supplementary Texts}
 \label{supplementary}
 
-Supplementary readings will be recommended throughout the course. In
-particular, students are asked to explore relevant church statements
-about Christian scripture, particularly the Old Testament. Resources
-from the founding churches of AST include the following.
+Supplementary readings will be recommended throughout the semester and
+either placed on reserve or made available through the course website.
+Give this material good effort and attention. As a foundation for this
+course, students are asked to explore relevant church statements about
+Christian scripture, particularly the Old Testament. Resources from the
+founding churches of AST include the following.
 
 \begin{enumerate}
 
@@ -141,7 +149,7 @@ from the founding churches of AST include the following.
 	\item PBC: \emph{Le peuple juif et ses Saintes Écritures dans la Bible chrétienne}, \href{http://www.vatican.va/roman_curia/congregations/cfaith/pcb_documents/rc_con_cfaith_doc_20020212_popolo-ebraico_en.html}{The Jewish People and Their Sacred Scriptures in the Christian Bible} (May 24, 2001)
 	\end{enumerate}
 
-\item ACC: Anglican Church of Canada (one of 38 Provinces in the Anglican Communion)
+\item ACC: Anglican Church of Canada (a \href{https://www.anglicancommunion.org/structures/member-churches.aspx}{member of the Anglican Communion})
 
 	\begin{enumerate}
 	\item Articles VI–VII of \href{https://www.churchofengland.org/prayer-worship/worship/book-of-common-prayer/articles-of-religion.aspx}{The Thirty-nine Articles of Religion} (1562)
@@ -161,15 +169,41 @@ from the founding churches of AST include the following.
 			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/song-faith}{A Song of Faith} (2006)
 		\end{enumerate}
 	\item \href{https://ecumenism.net/archive/docu/1992_ucc_authority_interpretation_scripture.pdf}{\emph{The Authority and Interpretation of Scripture: A Statement of the United Church of Canada}} (Toronto: UC Publishing House, 1992) [BS 480 U65 1992 -- \textbf{on reserve}]
-	\item See also R.\,C. Fennell's series “How Does the United Church Interpret the Bible?” in \href{http://touchstonecanada.ca}{\emph{Touchstone}}, a Canadian journal of theology and heritage:
+	\item See Robert C. Fennell's series “How Does the United Church Interpret the Bible?” in \href{http://touchstonecanada.ca}{\emph{Touchstone}}, a Canadian journal of theology and heritage:
 		\begin{enumerate}
 			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/Article2_2008-051.pdf}{Part I, 1904–1940s: Tradition and Resistance} (26.2 [2008]: 13--24)
 			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/3rdArticle_2008-09.pdf}{Part II, 1950s–1990s: Tradition and Liberation} (26.3 [2008]: 31--42)
 			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/Touchstone_May_2011.pdf}{Part III: A Song of Faith} (29.2 [2011]: 21--29)
 		\end{enumerate}
+
+		\item From an OT scholar, see also: Gerald T. Sheppard, \emph{The Future of the Bible: Beyond Liberalism and Literalism} (Toronto: United Church Publishing House, 1990).
+
 	\end{enumerate}
 
 \end{enumerate}
+
+Also, the following reference works are worth owning and consulting.
+\cite{rlgs} in particular contains sound advice on core skills like
+reading religious texts, writing essays and reviews, revising essays,
+making oral presentations, and learning languages.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
+
+	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
+	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
+
+	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
+	\emph{The SBL Handbook of Style}.
+	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
+	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
+	(the standard at AST), there is also a free
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
+
+\end{thebibliography}
+\endgroup
 
 
 \section{Course Outline}
@@ -184,29 +218,39 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lcccr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Topic}&\textbf{Anderson}&\textbf{MacDonald}&\textbf{OT Text}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Topic}&\textbf{Anderson}&\textbf{Davis}&\textbf{OT Scripture}&\textbf{Date}\\
 	\midrule
 
-		& Approaches          & 1    & 1    & 1 Sam 4–6      & 17 July \\
-		& Impassibility       & 2    & 2--4 & Jonah 1--4     & 18 July \\
-		& Creation            & 3    & 5--6 & Gen 1--3       & 19 July \\
-	\reminder{Articles of Faith \textbf{due} at the start of class four}{} \\
-		& Original Sin        & 4    &      & Exod 32--34    & 20 July \\
-		& Election            & 5    & 7--8 & Gen 12, 15, 17 & 21 July \\
-	\noclass{Weekend}                                        & 22--23 July \\
-		& Christology         & 6    & 9    & 1 Kings 8      & 24 July \\
-		& Mariology           & 7    &      & 1 Sam 1--2     & 25 July \\
-		& Faith \& Works      & 8--9 & 10   & Tobit 1--4     & 26 July \\
-		& Atonement           & 10   & 11   & Tobit 12--14   & 27 July \\
-	\reminder{Paper is \textbf{due} at the start of class ten}{}  \\
-		& Accordance          &      &      & 2 Kings 17     & 28 July \\
-	\reminder{End of Term: Final marks are due to the Registrar}{7 Aug.} \\
+	\unit{Theology \emph{\&} Hermeneutics} \\
+		& Introductions       & Intro & Intro &             & 13 Jan. \\
+		& Apophaticism        & 1     & 3     & Lev 8--10   & 20 Jan. \\
+		& Impassibility       & 2     & 10    & Jonah 1--4  & 27 Jan. \\
+	\unit{Origins} \\
+		& Creation            & 3     & 1     & Gen 1--3    &  3 Feb. \\
+		& Sin                 & 4     & 2     & Exod 32--34 & 10 Feb. \\
+		& Election            & 5     & 4--5  & Gen 50      & 17 Feb. \\% Anderson 88n24: Does Joseph forgive? Are the brothers fully reconciled?
+	\noclass{Reading Week}                                  & 24 Feb. \\
+	\unit{Christology} \\
+		& Christology 1       & 6     & 9    & Exod 40      &  3 Mar. \\
+		& Mariology           & 7     & 8    & 1 Sam 1--2   & 10 Mar. \\
+		& Christology 2       & 8     & 11   & Tobit 1--4   & 17 Mar. \\
+	\unit{Sanctification} \\
+		& Merits              & 9     & 15   & Prov 19      & 24 Mar. \\
+		& Purgation           & 10    & 17   & Dan 4        & 31 Mar. \\
+		& Conclusions         &       & 14   & Ps 19        &  7 Apr. \\
+	\reminder{End of Term: Final marks due for all courses}{13 Apr.} \\
 
 	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
   \label{schedule}
 \end{table}
+
+
+%	\reminder{Articles of Faith \textbf{due} at the start of class four}{} \\
+%	\reminder{Paper is \textbf{due} at the start of class ten}{}  \\
+
+
 
 See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
 
