--- a/policy/tutorials.tex
+++ b/policy/tutorials.tex
@@ -33,8 +33,8 @@ for \ccode.
 
 	\item Written feedback will be returned by email or on Teams
 	following discussion in the tutorial. Marks will not be assigned to
-	the essays initially, and only in two cases later. Instead,
-	affirmation and redirection will be provided as needed.
+	the essays submitted on a weekly basis. Instead, affirmation and
+	redirection will be provided as needed.
 
 	\item Select two of your best essays to revise and resubmit for a
 	formal mark. Both essays must be submitted before the last day of
