rename 1st unit to Theol & Scripture

--- a/ST-cross/HBST 3001-Doctrine and the OT.tex
+++ b/ST-cross/HBST 3001-Doctrine and the OT.tex
@@ -221,7 +221,7 @@ the needs of the class.
 	\sessionskip{\textbf{\S}.}&\textbf{Topic}&\textbf{Anderson}&\textbf{Davis}&\textbf{OT Scripture}&\textbf{Date}\\
 	\midrule
 
-	\unit{Theology \emph{\&} Hermeneutics} \\
+	\unit{Theology \emph{\&} Scripture} \\
 		& Introductions       & Intro & Intro &             & 13 Jan. \\
 		& Apophaticism        & 1     & 3     & Lev 8--10   & 20 Jan. \\
 		& Impassibility       & 2     & 10    & Jonah 1--4  & 27 Jan. \\
