update HB 2202 for S22 semester

--- a/HB/HB 2201-Driver 2022.tex
+++ b/HB/HB 2201-Driver 2022.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.5.0]{HB 2201}
+\coursecode[3.6.0]{HB 2201}
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew I}
 
 % Taught as HEBR 2013 in:
@@ -22,17 +22,18 @@
 %   - Fall 2015
 % Taught as HB 2201 in:
 %   - Fall 2018
-%   - Summer 2020
+%   - Summer 2020 (on Teams)
+%   - Summer 2022 (on campus)
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Daily, 3:00--4:00 \PM\ Atlantic}
+\officehours{Daily, 1:00--2:00 \PM}
 
-\semester{Summer Term 2020}
+\semester{Summer Term 2022}
 \meets{Daily (Mon–Fri)}% \meets{on}{at}{in}
-      {2:30--3:00 \PM\ Atlantic}
-      {Teams (via AST email)}
+      {9:00 \AM--12:00 \PM}
+      {Classroom 3}
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB 2202 and advanced biblical Hebrew]{% copy from the current Academic Calendar; [] for prereqs
 
@@ -42,19 +43,19 @@
 	syntax are learned inductively, through a cycle of illustrated readings
 	drawn from Genesis. Techniques of second-language acquisition are also
 	used to help develop language competency. Continuation in HB 2202 is
-	strongly recommended. This course is open to AST students and to
+	strongly recommended. This course is open to for-credit students and to
 	Continuing Education participants.
 
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-	The basic goal of this course is to become proficient in the
-	rudiments of biblical Hebrew. The course is designed as the first
-	part of a two semester series. This summer, however, it is being
-	offered as a stand-alone course with two different options for
+	The basic goal of this course is to begin to learn the rudiments of
+	biblical Hebrew. The course is designed as the first part of a
+	two-semester series. Since some may not continue in the Fall,
+	however, \ccode is being offered with two different options for
 	outcomes.
 
 	Option 1: Learn the alphabet, vowels, and syllables with the aim of
-	continuing to learn Hebrew on your own. Students will become
+	continuing to learn Hebrew in HB 2202. Students will become
 	familiar with the components that can be added to the front and back
 	of Hebrew nouns and adjectives so that they can gain a basic
 	understanding of the relationship between parsings in electronic
@@ -76,8 +77,8 @@
 	enough confidence and momentum to progress through the grammar and
 	workbook on their own schedule. This option caters to the objectives
 	of some continuing education students, for example, but without
-	imposing limits. In a past course, the highest achiever overall was
-	an auditor.
+	imposing limits. Note that, in a past iteration of the course, the
+	highest achiever overall was an auditor.
 
 	A goal in every case is to whet the appetite for learning Biblical
 	Hebrew for long-term study and use. Language is communal. In the
@@ -137,7 +138,7 @@ making oral presentations, and learning languages.
     \bibitem[BHS]{bhs}
     \emph{Biblia Hebraica Stuttgartensia}.
     Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. ISBN 978-1598561630.
-    This remains the standard critical edition, though it is slowly
+    This remains the standard critical edition, though it is gradually
     being replaced by the BHQ. A paperback edition, marketed to
     students, is also available; the hardback is much more durable.
 
@@ -167,19 +168,19 @@ the needs of the class.
     \toprule
     \bfseries Ch & \textbf{Learning Biblical Hebrew: Grammar} & \textbf{Workbook} & \textbf{Date} \\
     \midrule
-    1  & The Hebrew Alphabet                                          & E1 (a–b) & 29 June \\
-    2  & Hebrew Vowels                                                & E2     & 30 June \\
-    3  & Syllables and Reading Hebrew                                 & E3     &  1 July \\
-    4  & Gender and Number, Definite Article, Conjunction             & E4, R4 &  2 July \\
-    5  & Vowel Changes in Hebrew Nouns                                & E5, R4 &  3 July \\
-    6  & Noun and Adjective Function                                  & R6     &  6 July \\
-    7  & Constructs, Directional Ending, Prepositions, Interrogatives & E7, R7 &  7 July \\
-    8  & Pronominal Suffixes and Review of Definiteness               & E8, R8 &  8 July \\
-    9  & Learning to Read Intuitively: Common Patterns in Nouns       & R9–10  &  9 July \\
-    10 & Numbers                                                      & R9–10  & 10 July \\
+    1  & The Hebrew Alphabet                                          & E1 (a–b) & 13 June \\
+    2  & Hebrew Vowels                                                & E2       & 14 June \\
+    3  & Syllables and Reading Hebrew                                 & E3       & 15 June \\
+    4  & Gender and Number, Definite Article, Conjunction             & E4, R4   & 16 June \\
+    5  & Vowel Changes in Hebrew Nouns                                & E5, R4   & 17 June \\
+    6  & Noun and Adjective Function                                  & R6       & 20 June \\
+    7  & Constructs, Directional Ending, Prepositions, Interrogatives & E7, R7   & 21 June \\
+    8  & Pronominal Suffixes and Review of Definiteness               & E8, R8   & 22 June \\
+    9  & Learning to Read Intuitively: Common Patterns in Nouns       & R9–10    & 23 June \\
+    10 & Numbers                                                      & R9–10    & 24 June \\
     \bottomrule
   \end{tabular}
-  \caption{Schedule of Lessons (Chapters), Exercises (E) \& Readings (R)}
+  \caption{Schedule of Lessons by Chapter, Exercise (E) \& Reading (R)}
   \label{schedule}
 \end{table}
 
@@ -203,27 +204,30 @@ The grade structure for \ccode has the following elements.
     photos of any relevant pages \cite[3–34, 79–101]{work}.
  \item
     \textbf{Quizzes} are based on the \cite{lbh} and \cite{work}
-    assignments. Six are set, with three due at the end of each week of
-    the two-week course (by midnight on Saturday). All quizzes are
-    closed book. Students must take opportunities accurately to assess
-    what they have learned and retained. Continuing education students
-    and auditors are free to do this on their own.
- \item
-    Students who are taking the course for credit must use a
-    \textbf{proctor} to administer and attest their quizzes. Select
-    someone over the age of 18 to act as your proctor. Instruct them to
-    email your instructor
-    (\href{mailto:ddriver@astheology.ns.ca}{ddriver@astheology.ns.ca})
-    to receive electronic copies of all six quizzes for this course.
-    When you are ready to take each quiz, your proctor will provide you
-    with a printed copy of the test materials. Be sure that you include
-    compensation for them to do so, as appropriate. When you are
-    finished with each quiz, the proctor will verify that it was taken
-    as prescribed, attest it by signing their name under your name, and
-    make sure that you submit it online. Please upload each quiz to the
-    correct assignment slot on Teams. You will obviously need to scan
-    each one as a PDF (preferred) or take a photo of each page with your
-    cell phone.
+    assignments. Between four and six quizzes will be set throughout the
+    two-week course. All quizzes are closed book. Students must take
+    opportunities accurately to assess what they have learned and
+    retained. Continuing education students and auditors are encouraged
+    to participate in these exercises fully by scoring and correcting
+    their own work.
+
+%%%%%%% For online delivery
+% \item
+%    Students who are taking the course for credit must use a
+%    \textbf{proctor} to administer and attest their quizzes. Select
+%    someone over the age of 18 to act as your proctor. Instruct them to
+%    email your instructor
+%    (\href{mailto:ddriver@astheology.ns.ca}{ddriver@astheology.ns.ca})
+%    to receive electronic copies of all six quizzes for this course.
+%    When you are ready to take each quiz, your proctor will provide you
+%    with a printed copy of the test materials. Be sure that you include
+%    compensation for them to do so, as appropriate. When you are
+%    finished with each quiz, the proctor will verify that it was taken
+%    as prescribed, attest it by signing their name under your name, and
+%    make sure that you submit it online. Please upload each quiz to the
+%    correct assignment slot on Teams. You will obviously need to scan
+%    each one as a PDF (preferred) or take a photo of each page with your
+%    cell phone.
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
@@ -234,8 +238,8 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Workbook & 40\% \\
-    Quizzes  & 60\% \\
+    Workbook & 50\% \\
+    Quizzes  & 50\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
