--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2022/01/10 v2.9 -- Course policy]
+\ProvidesFile{other.tex}[2022/06/08 v2.9.1 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -13,8 +13,8 @@ free from error. In this course they should follow SBL Style (see
 \cite{sbl2} in \autoref{supplementary}, above). As a reminder, AST
 upholds an Inclusive Language Policy. Please use gender-inclusive
 language when referring to human beings. Our traditions have different
-norms for speech about God; therefore, you are free to use
-non-gender-inclusive pronouns when referring to God.
+norms for speech about God; you are of course free to follow and explore
+those traditions when referring to God.
 
 
 Plagiarism is the
